@@ -3,9 +3,11 @@ Version 0.9.1 "Mohotani" -- Subversion
 
 * Added collapse option to bulletmenu, for cases where section header
 is used as parents for other content
+* Changed breadcrumbs plugin to use menu text instead of title
 * Fixed bug with call to post render hook
 * Fixed nasty bug where content would have properties deleted if set
 inactive
+* Fixed bug with files.php trying to define cmsmodule more than once
 * Fixed permission check for setting active flag on content
 * Fixed automated module upgrades by making AllowAutoUpgrade() function
 return TRUE by defualt instead of FALSE (which is correct)
